<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetMainFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryCustom"
        app:cardCornerRadius="8dp"
        android:layout_margin="4dp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/findAndSortTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:padding="16dp"
            android:text="@string/find_and_sort"
            android:textAlignment="textStart"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/filter_type"
        app:layout_constraintEnd_toStartOf="@+id/filterSortDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <AutoCompleteTextView
            android:id="@+id/filterTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@android:array/emailAddressTypes" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/search"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/filterSortDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/filterSortUp"
        app:layout_constraintTop_toTopOf="@+id/filterInputLayout"
        app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />

    <ImageButton
        android:id="@+id/filterSortUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filterInputLayout"
        app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
</androidx.constraintlayout.widget.ConstraintLayout>